--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 button{
     color: rgb(18, 0, 0);
     background-color: rgb(252, 250, 250);
-    padding: 15px 50px 10px 15px;
+    padding: 15px 10px 50px 15px;
     border-radius: 50px;
+    text-align: center;
 }
