--- a/style.css
+++ b/style.css
@@ -2,14 +2,18 @@
 .attribution a { color: hsl(228, 45%, 44%); }
 
 #cabecalho{
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
 }
 
 button{
+    width: 150px;
     color: rgb(18, 0, 0);
-    background-color: rgb(252, 250, 250);
-    padding: 15px 10px 50px 15px;
+    background-color: rgb(255, 253, 253);
     border-radius: 50px;
     text-align: center;
+}
+img{
+    width: 200px;
 }
