--- a/style.css
+++ b/style.css
@@ -18,22 +18,14 @@ button{
 }
 main {
     margin: 0 5%;
-        border: 3px solid black; 
-
+    
 }
-h1{
-    display: flex;
-    justify-content: ;
-    align-items: start;
-    }
-    img{
-        display: flex;
-        justify-items: right
-        margin: 20px;
-        flex-direction:row;
-        height: 50vh;
-        width: 50vw;
-    }
-    p{
-        width: 30vw;
-    }
+#container1{
+    display:flex ;
+    justify-items: left;
+    align-content: space-around;
+    height: 50vh;
+    width: 50vw;
+    border: 3px solid black; 
+    
+}
