--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
-width: 100vw;
-height: 100vh;
+body {
+    width: 100vw;
+    height: 100vh;
 }
 
 header {
@@ -17,6 +17,10 @@ header {
     justify-content: space-between;
 }
 
+#logo {
+    width: 200px;
+}
+
 button {
     width: 150px;
     color: rgb(18, 0, 0);
@@ -25,12 +29,8 @@ button {
     border-radius: 50px;
     text-align: center;
 }
-img{
-    width: 200px;
-}
 
-#mockup
-{
+#mockup {
     display: flex;
     margin-left: 975px;
     padding-bottom: 50px;
