--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ header {
 
 #logo {
     width: 200px;
+    height: 40px;
 }
 
-button {
+#btnfree {
     width: 150px;
     color: rgb(18, 0, 0);
     background-color: rgb(252, 250, 250);
-    padding: 15px 50px 10px 15px;
     border-radius: 50px;
     text-align: center;
 }
