--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
@@ -12,10 +14,69 @@ button{
     padding: 15px 50px 10px 15px;
     border-radius: 50px;
 }
+
 * {
     margin: 0;
     padding: 0;
 }
 main {
     margin: 0 5%;
+}
+
+#container3 {
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 1px hsl(208, 11%, 55%);
+    margin-top: 20px;
+    height: 300px;
+    display: flex;
+    padding: 30px 30px 30px 50px;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px;
+    font-size: 18px;
+    font-family: "Open Sans", sans-serif;
+    text-align: left;
+    width: 50%;
+}
+.content h2 {
+    font-weight: 600;
+}
+.content p {
+    color: hsl(208, 11%, 55%);
+    font-size: 13px;
+    margin-top: 10px;
+}
+
+#modal {
+    background-color: rgb(252, 250, 250);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 1px hsl(208, 11%, 55%);
+    margin-bottom: 50px;
+
+}
+
+#modal h3 {
+    margin-top: 30px;
+    font-weight: 700;
+}
+
+#modal button {
+    background-color: hsl(322, 100%, 66%);
+    border: none;
+    box-shadow: 1px 1px 5px 1px hsl(208, 11%, 55%);
+    color: hsl(193, 100%, 96%);
+    margin: 25px 0;
+    padding: 15px 60px;
+    font-weight: 700;
 }
