--- a/style.css
+++ b/style.css
@@ -32,11 +32,29 @@ main {
     margin: 0 5%;
 }
 img{
-    width: 30%;
+    width: 50%;
 }
 #container2{
     border: 2px solid black;
     display: flex;
+    border-radius: ;
+}
+.conversation{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: left;
+    width: 50%;
+    padding: 100px;
+}
+h3{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    
+}
+p{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
 }
 #mockup
 {
