--- a/style.css
+++ b/style.css
@@ -84,3 +84,12 @@ button {
     width: 450px;
     height: 350px;
 }
+
+#imagem1{
+    width: 350px;
+    height: 250px;
+}
+
+main{
+    background: white;
+}
