atualizando main local

--- a/style.css
+++ b/style.css
@@ -29,10 +29,9 @@
     margin-left: 20px;
 }
 
-.row{
+#linhafooter{
     margin-top: 150px;
 }
-
 .texto_icon{
     margin-left: 15px;
     width: 200vw;
