--- a/style.css
+++ b/style.css
@@ -101,12 +101,23 @@ main{
     background: white;
 }
 
+#container1 {
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 1px hsl(0, 0%, 93%);
+    margin-top: 20px;
+    height: 300px;
+    width: 900px ;
+    display: flex;
+    padding: 30px 30px 30px 50px;
+}
 #container3 {
     border: none;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px 1px hsl(208, 11%, 55%);
+    box-shadow: 1px 1px 5px 1px hsl(0, 0%, 93%);
     margin-top: 20px;
     height: 300px;
+    width: 900px ;
     display: flex;
     padding: 30px 30px 30px 50px;
 }
@@ -139,7 +150,7 @@ main{
     margin: auto;
     margin-top: 50px;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px 1px hsl(208, 11%, 55%);
+    box-shadow: 1px 1px 5px 1px hsl(0, 0%, 93%);
     margin-bottom: 50px;
     padding: 30px;
 }
