--- a/style.css
+++ b/style.css
@@ -77,16 +77,17 @@ header {
     margin: 0;
     padding: 0;
 }
-img{
+/* img{
     width: 200px;
-}
+} */
 main {
     margin: 0 5%;
 }
 #img2{
     width:50%;
-    margin-top: 10%;
-    margin-bottom: 10%;
+    /* margin-top: 10px;
+    margin-bottom: 10px; */
+    margin: 20px 50px 20px 50px;    
     
 }
 
@@ -97,6 +98,8 @@ main {
     border-radius: 10px;
     border-color: hsl(208, 11%, 55%);
     margin: auto;
+    height: 300px;
+    padding: 50px;
    
 }
 .conversation{
@@ -105,7 +108,8 @@ main {
     flex-direction: column;
     text-align: left;
     width: 50%;
-    padding: 100px;
+    /* padding: 100px; */
+    /* align-items: center; */
 }
 h3{
     font-family: "Open Sans", sans-serif;
