--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
     width: 150px;
     color: rgb(18, 0, 0);
     background-color: rgb(252, 250, 250);
-    padding: 15px 50px 10px 15px;
+    /* padding: 15px 50px 10px 15px; */
     border-radius: 50px;
     text-align: center;
 }
@@ -77,9 +77,12 @@ header {
     margin: 0;
     padding: 0;
 }
-/* img{
-    width: 200px;
-} */
+img{
+    /* width: 100%; */
+    /* height: 100%; */
+    /* margin: 5px; */
+    margin: 0 100px;
+}
 main {
     margin: 0 5%;
 }
@@ -175,11 +178,22 @@ main{
     margin-bottom: 30px;
 }
 
+#container1 {
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 1px hsl(0, 0%, 80%);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 300px;
+    display: flex;
+    padding: 30px 30px 30px 50px;
+}
 #container3 {
     border: none;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px 1px hsl(208, 11%, 55%);
+    box-shadow: 1px 1px 5px 1px hsl(0, 0%, 80%);
     margin-top: 20px;
+    margin-bottom: 400px;
     height: 300px;
     display: flex;
     padding: 30px 30px 30px 50px;
@@ -188,11 +202,11 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 40px;
+    /* padding: 40px; */
     font-size: 18px;
     font-family: "Open Sans", sans-serif;
     text-align: left;
-    width: 50%;
+    width: 100%;
 }
 .content h2 {
     font-weight: 600;
@@ -220,6 +234,7 @@ main{
     position: absolute;
     left: 400px;
     top: 180%;
+    top: 1960px;
 }
 
 #modal h3 {
