--- a/style.css
+++ b/style.css
@@ -83,9 +83,7 @@ img{
     /* margin: 5px; */
     margin: 0 100px;
 }
-main {
-    margin: 0 5%;
-}
+
 #img2{
     width:50%;
     /* margin-top: 10px;
@@ -142,8 +140,10 @@ p{
 }
 
 
-main{
+@media (max-width: 900px) {{main
     background: white;
+    margin: 0 5%;
+}
 }
 
 #testeOne{
