--- a/style.css
+++ b/style.css
@@ -273,4 +273,113 @@ main{
 
 }
 
+@media (max-width: 900px) {
+    header{
+
+    }
+
+    main {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+  }
+  
+  /* Celular: até 600px */
+  @media (max-width: 600px) {
+    .box {
+      width: 90%;
+      padding: 1rem;
+      font-size: 1rem;
+    }
+  
+    header {
+      width: 100%;
+      font-size: 1rem;
+    
+    }
+
+    #logo {
+        width: 80px;
+        height: 20px;
+        margin-left: 90px;
+    }
+
+    #cabecalho {
+        margin-left: -75px;
+        margin-right: 0px;
+        display: flex;
+    }
+
+    #btn-1 {
+        margin-left: -20%;
+        border: none;
+        width: 95px;
+        height: 20px;
+        color: rgb(18, 0, 0);
+        background-color: rgb(252, 250, 250);
+        /* padding: 15px 50px 10px 15px; */
+        border-radius: 50px;
+        text-align: center;
+        margin-top: 25px;
+        box-shadow: 1px 1px 5px 1px hsl(0, 0%, 80%);
+        font-family: "Poppins", sans-serif;
+        font-weight: bold;
+        font-size: 0.7em;
+    }
+
+    #testeOne{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .but{
+        background-color: hotpink;
+        border: none;
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 0.5em;
+        margin: 2px 5px;
+        cursor: pointer;
+        border-radius: 20px;
+        font-family: "Poppins", sans-serif;
+        width: 200px;
+        margin-left: 30px;
+    }
+    
+    #fonteH{
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        font-size: 1em;
+        text-align: center;
+        margin-left: -60%;
+    }
+    
+    .hea{
+       padding: 10%;
+       display: flex;
+       flex-direction: column;
+    }
+    
+    #textoJ{
+        font-size: 0.68em;
+        margin-bottom: 20px;
+        font-family: "Open Sans", sans-serif;
+        width: 265px;
+        text-align: center;
+    }
+
+    #imagemM {
+        width: 400px;
+        height: 150px;
+        margin-left: -6%;
+        margin-top: -60%;
+        margin-bottom: 30%;
+    }
+
+
+  }
+
 
