--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); */
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
 
 #rodape{
     background-color: #00252e;
 }
 
-#copyright{
+#copyright p{
     background-color: #00252e;
     font-size: xx-small;
+    justify-self: end;
 }
 
 .linha1{
@@ -36,7 +40,7 @@
 }
 .texto_icon{
     margin-left: 15px;
-    width: 200vw;
+    /* width: 300vw; */
     height: 5px;
 }
 
@@ -83,46 +87,11 @@ header {
     font-weight: bold;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
+
 img{
-    /* width: 100%; */
-    /* height: 100%; */
-    /* margin: 5px; */
     margin: 0 100px;
 }
 
-#img2{
-    width:50%;
-    /* margin-top: 10px;
-    margin-bottom: 10px; */
-    margin: 0 100px;
-    
-}
-
-    
-#container2{
-    border: none;
-    box-shadow:  1px 1px 5px 1px hsl(0, 0%, 80%);
-    display: flex;
-    border-radius: 10px;
-    border-color: hsl(208, 11%, 55%);
-    margin: auto;
-    height: 300px;
-    padding: 50px;
-   
-}
-.conversation{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: left;
-    width: 50%;
-    /* padding: 100px; */
-    /* align-items: center; */
-}
 h3{
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
@@ -198,31 +167,27 @@ p{
     width: 600px;
 }
 
-#container1 {
+/* Estilos MAIN */
+main {
+    margin-top: 150px;
+}
+.container {
     border: none;
     border-radius: 10px;
     box-shadow: 1px 1px 5px 1px hsl(0, 0%, 80%);
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     height: 300px;
     display: flex;
     padding: 30px 30px 30px 50px;
 }
 #container3 {
-    border: none;
-    border-radius: 10px;
-    box-shadow: 1px 1px 5px 1px hsl(0, 0%, 80%);
-    margin-top: 20px;
     margin-bottom: 400px;
-    height: 300px;
-    display: flex;
-    padding: 30px 30px 30px 50px;
 }
 .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* padding: 40px; */
     font-size: 18px;
     font-family: "Open Sans", sans-serif;
     text-align: left;
@@ -245,16 +210,12 @@ p{
     justify-content: center;
     align-items: center;
     width: 50%;
-    margin: auto;
-    margin-top: 50px;
+    margin-top: -120px;
     border-radius: 10px;
     box-shadow: 1px 1px 5px 1px hsl(208, 11%, 55%);
-    margin-bottom: 50px;
     padding: 30px;
     position: absolute;
     left: 400px;
-    top: 180%;
-    top: 1960px;
 }
 
 #modal h3 {
@@ -271,7 +232,11 @@ p{
     margin: 25px 0;
     padding: 15px 60px;
     font-weight: 700;
+}
 
+p {
+    color: #808d99;
+    font-size: 18px;
 }
 
 @media (max-width: 900px) {
